# dbx

./: .gitignore  CHANGELOG-v0.5.29.md  PR_DESCRIPTION.md  package.json  pnpm-lock.yaml
.cargo/: config.toml
apps/desktop/src/: App.vue
apps/desktop/src/composables/: useDataGridActions.ts  useDiffScrollSync.ts  useNavigationTargets.ts  useSchemaDiffConfig.ts  useSqlExecution.ts
apps/desktop/src/lib/: ai.ts  api.ts  canvasDataGridRenderer.ts  dataGridColumnFilter.ts  databaseCapabilitySets.ts  databaseFeatureSupport.ts  editorThemes.ts  http.ts  tauri.ts  (+10 more)
crates/dbx-cli/: Cargo.toml
crates/dbx-cli/src/: commands.rs
crates/dbx-core/: Cargo.toml
crates/dbx-core/src/: agent_manager.rs  agent_runtime.rs  connection.rs  database_capabilities.rs  database_export.rs  lib.rs  plugins.rs  query.rs  query_cancel.rs  schema.rs  schema_diff.rs  transfer.rs  types.rs
crates/dbx-web/src/: main.rs
docs/: fix-pgsql-highlighting.md  professional-diff-plan.md  schema-diff-enhancement-plan.md
plugins/jdbc/: pom.xml
portable/DBX_0.5.29_x64/: README.md
portable/DBX_0.5.29_x64/data/: dbx.db
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: connection.rs  query.rs  schema.rs  schema_diff.rs
src/components/grid/: DataGrid.vue
src/components/layout/: ContentArea.vue
src/components/sidebar/: TreeItem.vue
src/composables/: useDataGridActions.ts  useNavigationTargets.ts
src/lib/: api.ts  http.ts  queryResultPagination.ts  tauri.ts
src/stores/: queryStore.ts
src/types/: database.ts
tests/: queryResultPagination.test.ts
(+50 files in other folders)
