[package]
name = "dbx-cli"
version = "0.5.2"
edition = "2021"

[[bin]]
name = "dbx-cli"
path = "src/main.rs"

[dependencies]
dbx-core = { path = "../dbx-core" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
uuid = { version = "1", features = ["v4", "serde"] }
libc = "0.2"

[dev-dependencies]
tempfile = "3"
